# mlbeginning

./: CMakeLists.txt  Edgedetection.cpp  QAQ.cpp  README.md  cv.h  edgedetection.cpp  graying .cpp  graying.cpp  lvbo.cpp  main.cpp  opentheimg.cpp  sensor.cpp  test.txt  try1.cpp
